--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="rocketpatrol/index.html">Rocket Patrol</a>
+    <a href="RPModded/index.html">Rocket Patrol Mods</a>
 </body>
 </html>
