--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     
 </head>
 <body>
-    <a href="rocketpatrol/index.html">Rocket Patrol</a>
-    <a href="RPModded/index.html">Rocket Patrol Mods</a>
+    <div>
+        <a href="rocketpatrol/index.html">Rocket Patrol</a>
+    </div>
+    <div>
+        <a href="RPModded/index.html">Rocket Patrol Mods</a>
+    </div>
 </body>
 </html>
