--- a/C21/index.html
+++ b/C21/index.html
@@ -13,6 +13,7 @@
     <script src="scenes/Runner.js"></script>
     <script src="scenes/story.js"></script>
     <script src="scenes/Menu.js"></script>
+    <script src="scenes/characterSelect.js"></script>
     <script src="src/main.js"></script>
 </head>
 <body>
