--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -8,6 +8,7 @@
     <script src="lib/phaser.js"></script>
     <script src="scenes/Load.js"></script>
     <script src="scenes/Menu.js"></script>
+    <script src="scenes/tutorialLoad.js"></script>
     <script src="scenes/LevelSelect.js"></script>
     <script src="scenes/Tutorial.js"></script>
     <script src="scenes/Level1.js"></script>
