--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
      <div>
         <a href="C21/index.html">Runaway Luna!</a>
     </div>
+         <div>
+        <a href="FinalProject/index.html">Pufferfish Misadventures!</a>
+    </div>
 </body>
 </html>
