--- a/FinalProject/index.html
+++ b/FinalProject/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puzzled Pufferfish</title>
+    <title>🐡Pufferfish Misadventures</title>
     <script src="lib/phaser.js"></script>
     <script src="scenes/Load.js"></script>
     <script src="scenes/Menu.js"></script>
